src/test/deca/syntax/valid/class/8_decl_list_champs.deca
/*
	Description: tests declarations une list de champs

	Resultat: syntaxiquement correct

	Date:20/1/2020
	

*/

class spiderman {

		captain ame=rica,batman=123, powerpuffgirl=123.123 ;


}
