src/test/deca/syntax/invalid/class/decl_expr_dans_class.deca
/*
	Description: declaration d'une list expression dans class

	Resultat: syntaxiquement correct

	Date:20/1/2020


*/



class a {

	12>32;
	kl==hello;
}

